# testreport-pro

./: .gitignore  package-lock.json  pyproject.toml
backend/api/: main.py
backend/parser/: cucumber_parser.py  playwright_parser.py  pytest_parser.py  sample.json  sample_pytest.xml  universal_parser.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
