[project]
name = "testreport-pro"
version = "0.1.0"
description = "Turn your test results into clear, shereable reports"
authors = [
    {name = "Vianney97",email = "loubelochristannel@gmail.com"}
]
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "python-multipart (>=0.0.27,<0.0.28)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
